--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "srart": "eleventy --serve",
-    "optimize-images": "node ./optimize-images.js"
+    "optimize-images": "node ./optimize-images.js",
+    "build": "eleventy"
   },
   "author": "Alex Kozack",
   "license": "ISC",
