--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "kozack.me",
+  "private": true,
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "srart": "eleventy --serve",
-    "build": "eleventy"
+    "build": "eleventy && gulp build"
   },
   "author": "Alex Kozack",
   "license": "ISC",
   "dependencies": {
+    "gulp-htmlmin": "^5.0.1"
+  },
+  "devDependencies": {
     "@11ty/eleventy": "^0.11.0",
-    "file-type": "^15.0.1",
-    "glob": "^7.1.6",
-    "gulp": "^4.0.2"
+    "del": "^6.0.0",
+    "gulp": "^4.0.2",
+    "gulp-postcss": "^9.0.0",
+    "gulp-replace": "^1.0.0",
+    "postcss-csso": "^4.0.0",
+    "postcss-import": "^12.0.1"
   }
 }
