--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,20 @@
 [[redirects]]
+from = "/ru/"
+to = "/"
+status = 302
+force = true
+conditions = { Language = ["en"] }
+
+[[redirects]]
 from = "/"
 to = "/ru/"
 status = 302
 force = true
 conditions = { Language = ["ru", "uk"] }
 
+
 [[redirects]]
-from = "/ru/"
+from = "/*"
 to = "/"
-status = 302
-force = true
-conditions = { Language = ["en"] }
+status = 301
+force = false
