--- a/netlify.toml
+++ b/netlify.toml
@@ -11,3 +11,10 @@ to = "/ru/"
 status = 302
 force = true
 conditions = { Language = ["ru", "uk"] }
+
+
+[[redirects]]
+from = "/*"
+to = "/index.html"
+status = 301
+force = false
