Добавлена украинская версия

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,15 +6,22 @@ force = true
 conditions = { Language = ["en"] }
 
 [[redirects]]
+from = "/uk/"
+to = "/"
+status = 301
+force = true
+conditions = { Language = ["en"] }
+
+[[redirects]]
 from = "/"
 to = "/ru/"
 status = 301
 force = true
-conditions = { Language = ["ru", "uk"] }
-
+conditions = { Language = ["ru"] }
 
 [[redirects]]
-from = "/*"
-to = "/"
+from = "/"
+to = "/uk/"
 status = 301
 force = true
+conditions = { Language = ["uk"] }
