--- a/netlify.toml
+++ b/netlify.toml
@@ -12,6 +12,7 @@ status = 301
 force = true
 conditions = { Language = ["en"] }
 
+
 [[redirects]]
 from = "/"
 to = "/ru/"
@@ -20,7 +21,23 @@ force = true
 conditions = { Language = ["ru"] }
 
 [[redirects]]
+from = "/uk/"
+to = "/ru/"
+status = 301
+force = true
+conditions = { Language = ["ru"] }
+
+
+
+[[redirects]]
 from = "/"
+to = "/uk/"
+status = 301
+force = true
+conditions = { Language = ["uk"] }
+
+[[redirects]]
+from = "/ru/"
 to = "/uk/"
 status = 301
 force = true
