--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,12 @@
+[[headers]]
+for = "/sitemap.xml"
+[headers.values]
+Content-type = "application/xml"
+
+
+
+
+
 [[redirects]]
 from = "/ru/"
 to = "/"
