--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,12 @@
 [[headers]]
+for = "*"
+[headers.values]
+Cross-Origin-Opener-Policy = "same-origin"
+Cross-Origin-Embedder-Policy = "require-corp"
+
+
+
+[[headers]]
 for = "/sitemap.xml"
 [headers.values]
 Content-type = "application/xml"
