--- a/package.json
+++ b/package.json
@@ -1,15 +1,9 @@
 {
-  "name": "kozack.me",
   "private": true,
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
     "srart": "eleventy --serve",
-    "build": "eleventy && gulp build"
+    "build": "eleventy && gulp"
   },
-  "author": "Alex Kozack",
-  "license": "ISC",
   "dependencies": {
     "@11ty/eleventy": "^0.11.0",
     "@fluent/bundle": "^0.16.0",
