--- a/package.json
+++ b/package.json
@@ -1,25 +1,12 @@
 {
   "private": true,
   "scripts": {
-    "srart": "eleventy --serve",
-    "build": "eleventy && gulp"
-  },
-  "dependencies": {
-    "@11ty/eleventy": "^1.0.1",
-    "@fluent/bundle": "^0.17.1",
-    "@wasm-codecs/oxipng": "^1.0.1",
-    "dotenv": "^16.0.0",
-    "qrcode": "^1.5.0"
+    "dev": "vitepress dev docs",
+    "build": "vitepress build docs",
+    "serve": "vitepress serve docs"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.5",
-    "del": "^6.0.0",
-    "gulp": "^4.0.2",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-postcss": "^9.0.1",
-    "gulp-replace": "^1.1.3",
-    "postcss": "^8.4.13",
-    "postcss-csso": "^6.0.0",
-    "postcss-import": "^14.1.0"
+    "vitepress": "1.0.0-alpha.13",
+    "vue": "3.2.39"
   }
 }
