feat: Додано sitemap.xml

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "vitepress serve docs"
   },
   "devDependencies": {
+    "sitemap": "7.1.1",
     "vitepress": "1.0.0-alpha.15",
     "vue": "3.2.39"
   }
