--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,11 @@
+[build]
+publish = "_site"
+command = """
+    curl -fsSL https://deno.land/x/install/install.sh | sh && \
+    /opt/buildhome/.deno/bin/deno task build \
+  """
+
+
 [[redirects]]
   from = "/ru"
   to = "/en"
@@ -9,3 +17,5 @@
   to = "/"
   status = 302
   force = false
+
+
