--- a/deno.json
+++ b/deno.json
@@ -1,15 +1,19 @@
 {
   "compilerOptions": {
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
+    "jsxImportSource": "npm:react",
+    "jsxImportSourceTypes": "npm:@types/react",
+    "types": [
+      "lume/types.ts"
+    ]
   },
   "tasks": {
-    "lume": "echo \"import 'lume/cli.ts'\" | deno run --unstable -A -",
+    "lume": "echo \"import 'lume/cli.ts'\" | deno run -A -",
     "build": "deno task lume",
     "serve": "deno task lume -s"
   },
   "imports": {
     "react/jsx-runtime": "https://esm.sh/react@18.2.0/jsx-runtime",
-    "lume/": "https://deno.land/x/lume@v1.18.4/"
+    "lume/": "https://deno.land/x/lume@v2.1.4/"
   }
 }
